deployment-1-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mec-test-app-1
  namespace: mec-app
  labels:
    app:  mec-test-app-1
spec:
  selector:
    matchLabels:
      app: mec-test-app-1
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  mec-test-app-1
    spec:
      nodeSelector:
        kubernetes.io/hostname: minikube
      containers:
      - name:  mec-test-app-1
        image:  ifilyaninitmo/mec-test-app-backend:main
        ports:
        - containerPort:  3002
          name:  mec-test-app-1
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mec-test-app-1
  namespace: mec-app
spec:
  selector:
    app: mec-test-app-1
  type: ClusterIP
  ports:
  - name: mec-test-app-1
    protocol: TCP
    port: 3001
    targetPort: 3002
