deployment-3-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mec-test-app-3
  namespace: mec-app
  labels:
    app:  mec-test-app-3
spec:
  selector:
    matchLabels:
      app: mec-test-app-3
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  mec-test-app-3
    spec:
      nodeSelector:
        kubernetes.io/hostname: minikube-m03
      containers:
      - name:  mec-test-app-3
        image:  ifilyaninitmo/mec-test-app-backend:main
        ports:
        - containerPort:  3002
          name:  mec-test-app-3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mec-test-app-3
  namespace: mec-test-app
spec:
  selector:
    app: mec-test-app-3
  type: ClusterIP
  ports:
  - name: mec-test-app-3
    protocol: TCP
    port: 3003
    targetPort: 3002
