ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mec-test-app
  namespace: mec-app
spec:
  rules:
  - host: backend.mecapp.site
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: mec-test-app-1
            port:
              number: 3001
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: mec-test-app-2
            port:
              number: 3002
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: mec-test-app-3
            port:
              number: 3003
      - path: /app4
        pathType: Prefix
        backend:
          service:
            name: mec-test-app-4
            port:
              number: 3004
